Fix MongoDB connection for production deployment

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
-MONGODB_URI=mongodb://localhost:27017/fashionstop
+# MongoDB connection string (replace with your MongoDB Atlas URL)
+MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/fashionstop?retryWrites=true&w=majority
+
+# Server port
 PORT=3000
-NODE_ENV=development
+
+# Environment
+NODE_ENV=production
