Add MongoDB database integration with fallback file storage

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,19 @@
-# MongoDB connection string (replace with your MongoDB Atlas URL)
+# MongoDB connection string (replace with your MongoDB Atlas URL or use local MongoDB)
+# For MongoDB Atlas (cloud):
 MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/fashionstop?retryWrites=true&w=majority
+# For local MongoDB:
+# MONGODB_URI=mongodb://localhost:27017/fashionstop
 
 # Server port
 PORT=3000
 
 # Environment
 NODE_ENV=production
+
+# Admin credentials (default)
+ADMIN_USERNAME=sujal
+ADMIN_PASSWORD=pass123
+
+# Application settings
+APP_NAME=Fashion Stop
+APP_VERSION=1.0.0
