--- a/render.yaml
+++ b/render.yaml
@@ -9,6 +9,11 @@ services:
     envVars:
       - key: NODE_ENV
         value: production
+      - key: MONGODB_URI
+        fromDatabase:
+          sync: false
+          name: fashion-stop-db
+          property: connectionString
 
 databases:
   - name: fashion-stop-db
