Configure Render environment with MongoDB integration

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,26 @@
-# MongoDB connection string (replace with your MongoDB Atlas URL or use local MongoDB)
-# For MongoDB Atlas (cloud):
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/fashionstop?retryWrites=true&w=majority
-# For local MongoDB:
-# MONGODB_URI=mongodb://localhost:27017/fashionstop
+# Environment Configuration for Fashion Stop E-commerce
 
-# Server port
-PORT=3000
-
-# Environment
+# Environment (development/production)
 NODE_ENV=production
 
-# Admin credentials (default)
+# Server Configuration
+PORT=10000
+
+# MongoDB Configuration
+# For Render deployment (automatically provided):
+MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/fashionstop?retryWrites=true&w=majority
+# For local development:
+# MONGODB_URI=mongodb://localhost:27017/fashionstop
+
+# Admin Credentials
 ADMIN_USERNAME=sujal
 ADMIN_PASSWORD=pass123
 
-# Application settings
+# Application Settings
 APP_NAME=Fashion Stop
 APP_VERSION=1.0.0
+
+# Render Deployment Notes:
+# - MONGODB_URI will be automatically set by Render from the database service
+# - PORT will be automatically set by Render (usually 10000)
+# - All other variables are configured in render.yaml
