--- a/render.yaml
+++ b/render.yaml
@@ -6,16 +6,27 @@ services:
     buildCommand: npm install
     startCommand: node server.js
     healthCheckPath: /health
+    autoDeploy: true
     envVars:
       - key: NODE_ENV
         value: production
+      - key: PORT
+        value: 10000
       - key: MONGODB_URI
         fromDatabase:
-          sync: false
           name: fashion-stop-db
           property: connectionString
+      - key: ADMIN_USERNAME
+        value: sujal
+      - key: ADMIN_PASSWORD
+        value: pass123
+      - key: APP_NAME
+        value: Fashion Stop
+      - key: APP_VERSION
+        value: 1.0.0
 
 databases:
   - name: fashion-stop-db
     databaseName: fashionstop
     plan: free
+    user: fashionstop_user
